--- a/index.html
+++ b/index.html
@@ -9,18 +9,29 @@
 <body>
     
 <div class="video">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/y1Eei1-4Ujs?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/y1Eei1-4Ujs?start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 <div class="texto">
     <P>
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-        <br>
-        <br>
-        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-        <br>
-        <br>
-        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        <h1>Doce Maria</h1>
+Ontem eu olhei para o céu e comecei a dar para cada estrela um motivo para gostar de você…faltaram estrelas.
+<br>
+<br>
+No céu às vezes apareciam algumas nuvens que cobriam as estrelas, eles me fizeram lembrar os teus defeitos, me fizeram lembrar o quanto vc é indecisa, chata e teimosa.
+<br>
+<br>
+
+Mas as nuvens são passageiras, logo se foram, e sabe o que eu vi depois? Eu vi as estrelas que brilhavam.
+<br>
+<br>
+
+ Elas são bem mais bonitas que as nuvens e duram muito mais tempo. Por elas eu sou apaixonado e para ver o brilho delas, vale a pena suportar as nuvens.
+<br>
+<br>
+
+Doce Maria, Deus roubou o brilho das estrelas e colocou no teu sorriso. Se me perguntarem por quanto amar-te-ei, eu prontamente responderei: eu amar-te-ei enquanto no céu existir estrelas.
+
     </P>
 
 </div>
