--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wennas</title>
      <link rel="stylesheet" href="estilos.css">
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     
@@ -31,9 +34,14 @@ Mas as nuvens são passageiras, logo se foram, e sabe o que eu vi depois? Eu vi 
 <br>
 
 Doce Maria, Deus roubou o brilho das estrelas e colocou no teu sorriso. Se me perguntarem por quanto amar-te-ei, eu prontamente responderei: eu amar-te-ei enquanto no céu existir estrelas.
-
+<h1>Eu te Amo!</h1>
     </P>
 
+</div>
+
+<div class="imagem">
+    <img src="imagem.jpeg" />
+    <h2>José Wennas & Maria Tânia</h2>
 </div>
 
 <div class="formulario">
