--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <!-- Meta Pixel Code -->
+
 
 <head>
     <meta charset="UTF-8">
@@ -25,10 +25,8 @@
     fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=1800101430471806&ev=PageView&noscript=1"
-    /></noscript>
+    src="https://www.facebook.com/tr?id=1800101430471806&ev=PageView&noscript=1"/></noscript>
     <!-- End Meta Pixel Code -->
-
 </head>
 <body>
     
